--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ h2 {
 
 .jqcarousel-container {
     position: relative;
-    width: 700px;
+    width: 668px;
     margin: 70px auto;
     overflow: hidden;
 }
@@ -27,13 +27,22 @@ h2 {
 
 .jqcarousel figure {
     display: inline-block;
-    width: 200px;
-    margin: 0;
-    padding: 14px;
-    border: 1px solid #9c8568;
+    width: 210px;
+    margin: 0 5px;
+    /*padding: 4px;*/
+    /*border: 1px solid #9c8568;*/
+}
+
+.jqcarousel figure:first-child {
+    margin-left: 0;
+}
+
+.jqcarousel figure:last-child {
+    margin-right: 0;
 }
 
 .jqcarousel figcaption {
+    margin-top: 5px;
     color: #c1c8d2;
     font-style: italic;
     text-align: center;
@@ -45,7 +54,7 @@ h2 {
 
 .jqcarousel-controls {
     position: relative;
-    top: -188px;
+    top: -175px;
     margin: 0 auto;
     width: 700px;
 }
@@ -62,12 +71,12 @@ h2 {
 
 .left {
     position: absolute;
-    left: -30px;
+    left: -40px;
 }
 
 .right {
     position: absolute;
-    right: -30px;
+    right: -40px;
 }
 
 .boring {
