--- a/css/style.css
+++ b/css/style.css
@@ -111,12 +111,12 @@ img {
 
 .easter {
     width: 600px;
-    /*border: 5px solid #fff;*/
-    /*box-shadow: 0 0 5px 0 #bbb;*/
+    height: 400px;
+    border: 5px solid #fff;
 }
 
 .easter__slide {
-    display: inline-block;
+    float: left;
     width: 600px;
 }
 
@@ -125,7 +125,6 @@ img {
     top: -300px;
     margin: 0 auto;
     width: 600px;
-    /*height: 20px;*/
 }
 
 .prev,
