--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,8 @@
     padding: 0;
 }
 
-html {
-    background-color: #59616d;
-}
-
 h2 {
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     color: #f57253;
     text-align: center;
 }
@@ -18,14 +14,20 @@ h2 {
     font-family: Verdana, Arial, sans-serif;
 }
 
+.jqcarousel:first-child {
+    height: 100vh;
+    padding-top: 50px;
+    background-color: #59616d;
+}
+
 .jqcarousel-frame {
     position: relative;
-    margin: 70px auto;
+    margin: 70px auto 0;
     overflow: hidden;
 }
 
 .new-year {
-    width: 668px;
+    width: 705px;
 }
 
 .jqcarousel-content {
@@ -37,8 +39,8 @@ h2 {
     display: inline-block;
     width: 210px;
     margin: 0 5px;
-    /*padding: 4px;*/
-    /*border: 1px solid #9c8568;*/
+    padding: 4px;
+    border: 1px solid #9c8568;
 }
 
 .new-year__slide:first-child {
@@ -51,6 +53,7 @@ h2 {
 
 .new-year__slide figcaption {
     margin-top: 5px;
+    padding-bottom: 10px;
     color: #c1c8d2;
     font-style: italic;
     text-align: center;
@@ -66,8 +69,8 @@ h2 {
 }
 
 .years {
-    top: -175px;
-    width: 700px;
+    top: -115px;
+    width: 740px;
 }
 
 .left,
@@ -82,31 +85,24 @@ h2 {
 
 .left {
     position: absolute;
-    left: -40px;
+    left: -49px;
 }
 
 .right {
     position: absolute;
-    right: -40px;
+    right: -35px;
 }
 
 .boring {
-    color: grey;
+    color: #808080;
 }
 
 /* Second carousel */
 
-label {
-    /*display: block;
-    margin: 20px;
-    font-family: "Vedrana", sans-serif;
-    font-size: 20px;
-    font-weight: normal;
-    text-align: center;*/
-}
-
-img {
-    /*width: 640px;*/
+.jqcarousel:nth-child(2) {
+    padding-top: 40px;
+    padding-bottom: 100px;
+    background-color: #faebd7;
 }
 
 .easter {
@@ -122,7 +118,7 @@ img {
 
 .arrows {
     position: relative;;
-    top: -300px;
+    top: -220px;
     margin: 0 auto;
     width: 600px;
 }
@@ -134,9 +130,9 @@ img {
     height: 20px;
     padding: 5px;
     transition: opacity .3s;
-    border: 1px solid #d3d3de;
+    border: 1px solid #20202d;
     border-radius: 4px;
-    color: #d3d3de;
+    color: #20202d;
     font-size: 40px;
     line-height: 15px;
     text-align: center;
