--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@ h2 {
 }
 
 .jqcarousel:first-child {
-    height: 100vh;
-    padding-top: 50px;
+    height: 600px;
+    padding-top: 80px;
     background-color: #59616d;
 }
 
@@ -99,7 +99,7 @@ h2 {
 /* Second carousel */
 
 .jqcarousel:nth-child(2) {
-    padding-top: 40px;
+    padding-top: 80px;
     padding-bottom: 100px;
     background-color: #faebd7;
 }
